refactor: code quality improvements (Tier 1 & 2)
Tier 1:
- Replace .collect(Collectors.toList()) with .toList() (Java 16+) in 7 files
- Extract hardcoded PDF-to-HTML URL to application.yml (pdftohtml.api)
- Remove 3 unused Collectors imports

Tier 2:
- Fix SQL table name note_explain -> note_explains to match entity
- Add missing calendar_event_id column migration to todo_goal.sql
- Add logging to 6 silently-swallowing catch (Exception) blocks